# intake-aodn

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  Main_nb.ipynb  README.md  requirements.txt  setup.cfg  setup.py
intake_aodn/: __init__.py  _version.py  analysis.py  drivers.py  easicache.py  indexing.py  plot.py  utils.py
intake_aodn/catalogs/: aodn.yaml  main.yaml  nci.yaml
notebooks/: Benchmark_Methods.ipynb  Case_Study_Analysis.ipynb  Case_Study_Data_extraction.ipynb  Case_Study_Interactive.ipynb  Case_Study_Start.ipynb  Check_Catalog_Data.ipynb  Cropping_Methods.ipynb  Intake_Example.ipynb  Interactive.ipynb  Main_nb.ipynb  SST_fun.ipynb  Scale_It_Up.ipynb  SharkBay.kml  Start.ipynb  intro.ipynb
notebooks/ANMN/: rotto.ipynb
notebooks/benchmarking/: Benchmark_Methods-Dask.ipynb
notebooks/case_study/: 1_Case_Study_Start.ipynb  2_Case_Study_Interactive.ipynb  3_Case_Study_Analysis.ipynb  4_Case_Study_Data_extraction.ipynb
notebooks/cpr/: cpr_example.ipynb  cpr_sst.ipynb  marine_regions.shp.xml
notebooks/intake_usage/: 0_Check_Catalog_Data.ipynb  1_Intake_Catalog.ipynb  2_Cropping_Methods.ipynb  3_Monthly_Mean.ipynb  4_Scale_It_Up.ipynb  5_Data_Fusion.ipynb
notebooks/kerchunk_extraction/: access_via_aggindex.ipynb  create_agg_index.ipynb  create_and_aggregate.ipynb  create_reference_index.ipynb
