[metadata]
long_description: file: README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = intake_aodn/_version.py
versionfile_build = intake_aodn/_version.py
tag_prefix = ""

[flake8]
exclude = .tox,build,docs/source/conf.py,versioneer.py,fsspec/_version
max-line-length = 88
ignore =
# Assigning lambda expression
    E731
# Ambiguous variable names
    E741
# line break before binary operator
    W503
# whitespace before :
    E203